--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Charm&family=Mitr&family=Noto+Sans+Thai&family=Prompt:wght@400;700&family=Sriracha&family=Ubuntu&display=swap" rel="stylesheet">
-
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!--Stylesheet Navbar-->
   <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
@@ -38,7 +38,7 @@
    <header class="header">
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #ffcd00;" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand brand-color-change center-brand" href="index.html">
+            <a class="navbar-brand brand-color-change center-brand" href="https://namemyz.github.io/project_landing_page/">
                 <i class="fa-solid fa-champagne-glasses" style="color: #000000;"></i>
                 FWBAR
             </a>
@@ -50,16 +50,16 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav ms-auto nav-underline">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="https://namemyz.github.io/project_landing_page/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="https://namemyz.github.io/Features/">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team Members</a>
+                        <a class="nav-link" href="https://namemyz.github.io/Team-member/">Team Members</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="https://namemyz.github.io/Contract/">Contact</a>
                     </li>
                 </ul>
             </div>
