--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
       <!-- preloader -->
