--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav ms-auto nav-underline">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://namemyz.github.io/project_landing_page/">Home</a>
+                        <a class="nav-link" href="#Home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Features">Features</a>
@@ -74,7 +74,7 @@
   <!--Content Page Home-->
   <div class="container">
     <div class="row">
-        <div class="col-lg-6 col-md-12 col-xs-12 text-center">
+        <div id = "Home" class="Home col-lg-6 col-md-12 col-xs-12 text-center">
             <img class="drop-shadow" src="" width="100%">
             <h1 class="slogan drop-shadow text-center">Friend With Beer And Rum เพื่อนกินเหล้าที่คุณเลือกเอง!!!</h1>
             <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download on <br>App store</button>
